--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.3",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
@@ -22,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-scroll": "^1.8.9",
+    "styled-components": "^5.3.11",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
