--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-scroll": "^1.8.9",
+    "scroll-module": "^1.0.5",
     "styled-components": "^5.3.11",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
